--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>amqp-client</artifactId>
 			<version>5.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
 	</dependencies>
 
 	<build>
