--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -60,7 +60,12 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.5</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
