Project deployed in containers

--- a/DataStream/Dockerfile
+++ b/DataStream/Dockerfile
@@ -6,4 +6,5 @@ RUN python3 -m pip install numpy
 RUN pip install requests
 
 
-CMD ["rabbit:5672","--","python3","data_generator.py"]
+#CMD ["rabbit:5672","--","python3","data_generator.py"]
+ENTRYPOINT ["python3","data_generator.py"]
