--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>velocity</artifactId>
             <version>1.5</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-test</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
