--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -109,6 +109,11 @@
 			<artifactId>spring-websocket</artifactId>
 			<version>5.3.15</version>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>3.1.0.M1</version>
+		</dependency>
     </dependencies>
 
 	<build>
