--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -114,10 +114,23 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>3.1.0.M1</version>
 		</dependency>
+		
+
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-websocket</artifactId>
-			<version>2.5.4</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+			 <version>5.3.15</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.10.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId> 
+			<version>2.10.2</version>
 		</dependency>
     </dependencies>
 
