--- a/WebServer/src/main/resources/application.properties
+++ b/WebServer/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.password=secret2
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # Strategy to auto updatethe schemas  (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+# Mail server properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<your-gmail-id>
+spring.mail.password=<gamil-password>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
